--- a/template/package.json
+++ b/template/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "nuxt-express",
+  "name": "{{ name }}",
   "version": "1.0.0",
-  "description": "Nuxt.js project",
-  "author": "",
+  "description": "{{ description }}",
+  "author": "{{ author }}",
   "private": true,
   "scripts": {
     "dev": "HOST=0.0.0.0 PORT=3000 nuxt",
